blrlblelrlrl
In file included from /home/pi/midiMind/backend/src/midi/file/MidiFileReader.h:33,
                 from /home/pi/midiMind/backend/src/midi/file/MidiFileReader.cpp:22:
/home/pi/midiMind/backend/src/midi/file/MidiFileReader.cpp: In member function ‘midiMind::MidiFile midiMind::MidiFileReader::readFromBuffer(const uint8_t*, size_t)’:
/home/pi/midiMind/backend/src/midi/file/MidiFileReader.cpp:202:32: error: ‘MIDI_FILE_READ_FAILED’ is not a member of ‘midiMind::ErrorCode’
  202 |         THROW_ERROR(ErrorCode::MIDI_FILE_READ_FAILED,
      |                                ^~~~~~~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/file/../../core/Error.h:276:39: note: in definition of macro ‘THROW_ERROR’
  276 |     throw midiMind::MidiMindException(code, message)
      |                                       ^~~~
In file included from /home/pi/midiMind/backend/src/midi/file/MidiFileReader.h:33,
                 from /home/pi/midiMind/backend/src/midi/file/MidiFileWriter.cpp:22:
/home/pi/midiMind/backend/src/midi/file/MidiFileWriter.cpp: In member function ‘midiMind::MidiFile midiMind::MidiFileReader::readFromBuffer(const uint8_t*, size_t)’:
/home/pi/midiMind/backend/src/midi/file/MidiFileWriter.cpp:202:32: error: ‘MIDI_FILE_READ_FAILED’ is not a member of ‘midiMind::ErrorCode’
  202 |         THROW_ERROR(ErrorCode::MIDI_FILE_READ_FAILED,
      |                                ^~~~~~~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/midi/file/../../core/Error.h:276:39: note: in definition of macro ‘THROW_ERROR’
  276 |     throw midiMind::MidiMindException(code, message)
      |                                       ^~~~
/home/pi/midiMind/backend/src/midi/file/MidiFileReader.cpp:204:5: warning: control reaches end of non-void function [-Wreturn-type]
  204 |     }
      |     ^
/home/pi/midiMind/backend/src/midi/file/MidiFileWriter.cpp:204:5: warning: control reaches end of non-void function [-Wreturn-type]
  204 |     }
      |     ^
make[2]: *** [CMakeFiles/midimind.dir/build.make:359: CMakeFiles/midimind.dir/src/midi/file/MidiFileReader.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/midimind.dir/build.make:373: CMakeFiles/midimind.dir/src/midi/file/MidiFileWriter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
